--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,38 @@
-
-*{
+* {
     padding: 0;
     margin: 0;
 }
-html{
+
+html {
     scroll-behavior: smooth;
     max-width: 100%;
     overflow-x: hidden;
 }
-nav{
+
+nav {
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0px;
     padding: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:  white;
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100vw;
-	z-index:1;
+    z-index: 1;
 }
 
-.nav-left{
+.nav-left {
     padding: 10px;
 }
 
 
 .nav-right {
     padding: 0px;
-  }
-  
- .nav-right a {
+}
+
+.nav-right a {
     font-weight: bold;
     font-size: 14px;
     text-transform: uppercase;
@@ -42,31 +43,36 @@ nav{
     display: inline-block;
     position: relative;
     opacity: 0.75;
-  }
-  
-  
-
-
-
-.logo{
-    text-transform: uppercase;font-weight: bold;font-size: 35px;
 }
 
-nav ul{
+
+
+
+
+.logo {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+nav ul {
     list-style: none;
     display: flex;
     text-transform: uppercase;
 
 }
-li a{
+
+li a {
     margin: 20px;
     color: #132945;
     text-decoration: none;
 }
-li a:hover{
+
+li a:hover {
     font-weight: bold;
 }
-header{
+
+header {
     background-image: url('../img/bg.jpg');
     background-size: cover;
     height: 100vh;
@@ -74,18 +80,20 @@ header{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+
 }
 
-header h2{
+header h2 {
     color: white;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 75px;
 }
-.underText{
+
+.underText {
     color: white;
 }
-.about-me{
+
+.about-me {
     display: flex;
     padding: 2rem;
     justify-content: center;
@@ -94,11 +102,12 @@ header h2{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.about-me h2{
+.about-me h2 {
     font-size: 50px;
     position: relative;
 }
-.about-me h2::before{
+
+.about-me h2::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -107,21 +116,25 @@ header h2{
     background-color: #132945;
     animation: h2-bottom 1s infinite ease-in-out alternate;
 }
-@keyframes h2-bottom{
-    0%{
+
+@keyframes h2-bottom {
+    0% {
         width: 0px;
     }
-    100%{
+
+    100% {
         width: 100%;
     }
 }
-.about-box{
+
+.about-box {
     padding: 50px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px 2px #132945;
     margin: 30px;
 }
-.projects{
+
+.projects {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,12 +144,14 @@ header h2{
     padding: 2rem;
 
 }
-.projects h2{
+
+.projects h2 {
     font-size: 50px;
     position: relative;
     font-family: 'Source Sans Pro', sans-serif;
 }
-.projects h2::before{
+
+.projects h2::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -146,15 +161,17 @@ header h2{
     animation: h2-bottom 1s infinite ease-in-out alternate;
 
 }
-.projects-div{
+
+.projects-div {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 }
-.card{
+
+.card {
     /* background-color: rgb(0, 143, 143,0.1); */
-    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255,0.3);
+    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255, 0.3);
     color: black;
     padding: 20px;
     margin: 20px;
@@ -168,11 +185,12 @@ header h2{
     width: 200px;
 }
 
-.proName{
+.proName {
     font-size: 35px;
     color: white;
 }
-.proLink{
+
+.proLink {
     background: #005eda;
     padding: 10px 20px;
     border-radius: 5px;
@@ -180,10 +198,12 @@ header h2{
     text-decoration: none;
     margin: 10px;
 }
-.desc{
+
+.desc {
     color: #88bafc;
 }
-.education{
+
+.education {
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -192,11 +212,12 @@ header h2{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.education h2{
+.education h2 {
     font-size: 50px;
     position: relative;
 }
-.education h2::before{
+
+.education h2::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -205,25 +226,29 @@ header h2{
     background-color: #132945;
     animation: h2-bottom 1s infinite ease-in-out alternate;
 }
-.education-box{
+
+.education-box {
     padding: 50px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px 2px #132945;
     margin: 30px;
-	display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.column{
-    float:left;
+
+.column {
+    float: left;
 }
+
 .vertical {
     border-left: 3px solid black;
     height: 140px;
-    position:flex;
+    position: flex;
     left: 50%;
-          }
-.skills{
+}
+
+.skills {
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -233,12 +258,14 @@ header h2{
     color: white;
     padding: 20px;
 }
-.skills h2{
+
+.skills h2 {
     font-size: 50px;
     position: relative;
     font-family: 'Source Sans Pro', sans-serif;
 }
-.skills h2::before{
+
+.skills h2::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -248,14 +275,16 @@ header h2{
     animation: h2-bottom 1s infinite ease-in-out alternate;
 
 }
-.skills-div{
+
+.skills-div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.skills-card{
+
+.skills-card {
     /* background-color: rgb(0, 143, 143,0.1); */
-    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255,0.3);
+    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255, 0.3);
     color: black;
     padding: 20px;
     margin: 20px;
@@ -266,20 +295,60 @@ header h2{
     align-items: center;
     flex-direction: column;
 }
-.skill{
+
+.skill {
     color: white;
 }
 
+.contact {
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.contact h2 {
+    font-size: 50px;
+    position: relative;
+}
+
+.contact h2::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 0%;
+    height: 3%;
+    background-color: #132945;
+    animation: h2-bottom 1s infinite ease-in-out alternate;
+}
+
+.proContactLink {
+    background: #000000;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    margin: 10px;
+}
+
+.logo {
+
+    font-size: 36px;
+
+}
 
 /*Mobile Screen*/
-@media screen and (max-width:768px){
-    .education-box{
+@media screen and (max-width:768px) {
+    .education-box {
         padding: 10px;
         flex-direction: column;
     }
+
     .vertical {
         border-left: 0;
-        height:auto;
+        height: auto;
         border-top: 3px solid black;
         width: 70%;
     }
