--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,8 @@ header h2{
 .underText{
     color: rgb(8, 3, 3);
     background-color:#ffa500;
-    font-size: 1.5rem;
+    margin-top:15px;
+    font-size: 12px;
     padding: 10px;
     border-radius: 30px;
 }
