--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ header h2{
     font-size: 75px;
 }
 .underText{
-    color: rgb(8, 3, 3);
-    background-color:#ffa500;
+    color: white;
+    margin-top:38px;
     font-size: 16px;
     padding: 10px;
     
