--- a/css/style.css
+++ b/css/style.css
@@ -8,64 +8,103 @@ html{
     max-width: 100%;
     overflow-x: hidden;
 }
-nav{
-    font-family: 'Source Sans Pro', sans-serif;
-    margin: 0px;
-    padding: 0px;
+
+/* NAVBAR STYLING BEGINS HERE */
+.navbar {
     display: flex;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    top: 0;
     justify-content: space-between;
     align-items: center;
-    background-color:  white;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-	z-index:1;
+    background-color:white;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
-.nav-left{
-    padding: 10px;
-}
-
-
-.nav-right {
-    padding: 0px;
-  }
-  
- .nav-right a {
-    font-weight: bold;
-    font-size: 14px;
+.brand-title {
+    font-size: 35px;
     text-transform: uppercase;
-    text-decoration: none;
-    color: #031D44;
-    padding: 20px 0px;
-    margin: 0px 20px;
-    display: inline-block;
-    position: relative;
-    opacity: 0.75;
-  }
-  
-  
-
-
-
-.logo{
-    text-transform: uppercase;font-weight: bold;font-size: 35px;
+    font-weight: bold;
+    margin: 0.5rem;
 }
-
-nav ul{
-    list-style: none;
+  
+.navbar-links {
+    height: 100%;
+}
+  
+.navbar-links ul {
     display: flex;
-    text-transform: uppercase;
-
+    margin: 0;
+    padding: 0;
 }
-li a{
-    margin: 20px;
-    color: #132945;
+  
+.navbar-links li {
+    list-style: none;
+}
+  
+.navbar-links li a {
+    display: block;
     text-decoration: none;
-}
-li a:hover{
+    text-transform: uppercase;
     font-weight: bold;
+    color: #132945;
+    font-size: 14px;
+    padding: 1rem;
+    opacity: 0.75;
 }
+.toggle-button {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+  
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #031D44;
+    border-radius: 10px;
+}
+  
+@media (max-width: 800px) {
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .toggle-button {
+      display: flex;
+    }
+  
+    .navbar-links {
+      display: none;
+      width: 100%;
+    }
+  
+    .navbar-links ul {
+      width: 100%;
+      flex-direction: column;
+    }
+  
+    .navbar-links ul li {
+      text-align: center;
+    }
+  
+    .navbar-links ul li a {
+      padding: 0.5rem 1rem;
+    }
+  
+    .navbar-links.active {
+      display: flex;
+    }
+}
+/* NAVBAR STYLING ENDS HERE */
+
 header{
     background-image: url('../img/bg.jpg');
     background-size: cover;
