--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ html{
     justify-content: space-between;
     width: 30px;
     height: 21px;
+    cursor: pointer;
 }
   
 .toggle-button .bar {
