--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ header h2{
     align-items: center;
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
+    /* flex-wrap: wrap; */
 }
 
 .about-me h2{
@@ -159,12 +160,33 @@ header h2{
         width: 100%;
     }
 }
+
+.about-contents{
+    display: flex;
+    /* padding: 2rem; */
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    max-height: fit-content;
+
+}
+
 .about-box{
     padding: 50px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px 2px #132945;
     margin: 30px;
+    flex: 1;
+
 }
+
+.about-img{
+    padding: 50px;
+    margin-left: 10rem;
+    flex: 1;  
+}
+
 .projects{
     display: flex;
     justify-content: center;
