--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,21 @@ header h2{
         border-top: 3px solid black;
         width: 70%;
     }
+    .about-me{
+      padding: 0.1rem;
+    }
+    .about-me h2{
+        margin: 2vh 0;
+    }
+    .about-box{
+        padding: 3vh 5vw;
+        border-radius: 8px;
+        box-shadow: 0px 2px 10px 2px #132945;
+        margin: 30px;
+        font-size: 1.2rem;
+        text-align: center;
+    }
+    
 }
 .education-subsection{
     padding: 2rem;
