--- a/css/style.css
+++ b/css/style.css
@@ -174,10 +174,13 @@ header h2{
 
 .about-box{
     padding: 50px;
+    text-indent: 50px;
     border-radius: 8px;
     box-shadow: 0px 2px 10px 2px #132945;
     margin: 30px;
     flex: 1;
+    font-size: large;
+    color:rgb(56, 55, 55);
 
 }
 
