--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,200');
+
 *{
     padding: 0;
     margin: 0;
@@ -234,17 +236,17 @@ header h2{
     }
 }
 
-
 .projects{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     background-color: #132945;
     color: white;
     padding: 2rem;
 
 }
+
 .projects h2{
     font-size: 50px;
     position: relative;
@@ -260,44 +262,90 @@ header h2{
     animation: h2-bottom 1s infinite ease-in-out alternate;
 
 }
-.projects-div{
-    display: flex;
-    padding-top: 2rem;
-    justify-content: center;
-    align-items: center;
-    flex-wrap:wrap;
-}
-.card{
-    /* background-color: rgb(0, 143, 143,0.1); */
-    box-shadow: 0px 2px 10px 2px rgb(255, 255, 255,0.3);
-    color: black;
-    padding: 20px;
-    margin: 20px;
-    font-family: 'Source Sans Pro', sans-serif;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-height: 300px;
-    width: 200px;
+
+.clickme {
+    color: #031D44;
+    background-color: #EEEEEE;
+    padding: 2px 20px;
+    text-decoration:none;
+    font-weight:bold;
+    border-radius:5px;
+    cursor:pointer;
 }
 
-.proName{
-    font-size: 35px;
-    color: white;
-}
-.proLink{
-    background: #005eda;
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-    text-decoration: none;
-    margin: 10px;
-}
-.desc{
-    color: #88bafc;
-}
+.testimotionals {
+    width:350px;
+     display:inline-block;
+      margin-left:50px;
+      margin-top:50px;
+    }
+    
+    
+    .testimotionals .card {
+      
+      position:relative;
+      overflow:hidden;
+      width:350px;
+      margin:0 auto;
+      background:#131B2F;
+      padding:20px;
+      box-sizing:border-box;
+      text-align:center;
+      box-shadow:0 10px 40px rgba(0,0,0,.5)
+    }
+    .testimotionals .card .layer {
+      z-index:1;
+      position:absolute;
+      top:calc(100% - 2px);
+      height:100%;
+      width:100%;
+      left:0;
+      background-image: linear-gradient(to top, #082757, #0a2f6a, #0f377d, #153f90, #1e47a4);
+      transition:0.5s;
+      
+    }
+    
+    .testimotionals .card .content {
+      z-index:2; 
+      position:relative;
+    }
+    
+    .testimotionals .card:hover  .layer{
+      top:0;
+    }
+    
+    .testimotionals .card .content p {
+      font-size:14px;
+      line-height:24px;
+      color:#fff;
+      
+    }
+    .testimotionals .card .content .image {
+      width:100px; height:100px;
+      margin:0 auto;
+      border-radius:50%;
+      overflow:hidden;
+      border: 4px solid white;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+      
+    }
+    
+    .testimotionals .card .content .details h3 {
+    font-size:18px;
+    color:white;
+    }
+    .testimotionals .card .content .details h3 span {
+    font-size:18px;
+    color:purple;
+      transition:0.5s;
+    }
+    .testimotionals .card:hover .content .details h3 span {
+      color:white;
+      position:relative
+    }
+
+
+
 .education{
     padding: 2rem;
     display: flex;
