--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ html{
     padding: 1rem;
     opacity: 0.75;
 }
+
 .toggle-button {
     position: absolute;
     top: 20px;
@@ -63,15 +64,101 @@ html{
     width: 30px;
     height: 21px;
     cursor: pointer;
-}
-  
-.toggle-button .bar {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+  }
+
+  .toggle-button .bar {
     height: 3px;
-    width: 100%;
+    width: 50%;
     background-color: #031D44;
     border-radius: 10px;
-}
+    display: block;
+    position: absolute;    
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+
+  }
   
+  .toggle-button .bar:nth-child(even) {
+    left: 50%;
+    border-radius: 0 9px 9px 0;
+  }
+  
+  .toggle-button .bar:nth-child(odd) {
+    left:0px;
+    border-radius: 9px 0 0 9px;
+  }
+  
+  .toggle-button .bar:nth-child(1), .toggle-button .bar:nth-child(2) {
+    top: 0px;
+  }
+  
+  .toggle-button .bar:nth-child(3), .toggle-button .bar:nth-child(4) {
+    top: 9px;
+  }
+  
+  .toggle-button .bar:nth-child(5), .toggle-button .bar:nth-child(6) {
+    top: 18px;
+  }
+  
+  .toggle-button.open .bar:nth-child(1),.toggle-button.open .bar:nth-child(6) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  
+  .toggle-button.open .bar:nth-child(2),.toggle-button.open .bar:nth-child(5) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+  
+  .toggle-button.open .bar:nth-child(1) {
+    left: 0;
+    top: 6px;
+  }
+  
+  .toggle-button.open .bar:nth-child(2) {
+    left: calc(50% - 5px);
+    top: 6px;
+  }
+  
+  .toggle-button.open .bar:nth-child(3) {
+    left: 20px;
+    opacity: 0;
+  }
+  
+  .toggle-button.open .bar:nth-child(4) {
+    left: 50%;
+    opacity: 0;
+  }
+  
+  .toggle-button.open .bar:nth-child(5) {
+    left: 0;
+    top: 16px;
+  }
+  
+  .toggle-button.open .bar:nth-child(6) {
+    left: calc(50% - 5px);
+    top: 16px;
+  }
+
 @media (max-width: 800px) {
     .navbar {
       flex-direction: column;
