added navigation bar links Hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,13 @@ html{
 /* NAVBAR HOVER EFFECT STARTS HERE */
 .navbar-links li a:hover{
     color: #030118;
-    font-weight: bolder;
-    font-size: 16.5px;
-    border-left: 1px solid #327ce4c5;
-    border-right: 1px solid #327ce4c5;
-    border-radius: 2px;
-    background-color: #6ea5f137;
+    font-weight: 900;
+    font-size: 15px;
+    text-decoration: underline;
+    letter-spacing: 1px;
+    background-color: #6ea5f18e;
+    box-shadow: inset 1px 1px 2px rgba(228, 228, 228, 0.849),
+                inset -1px -1px 2px rgb(228, 228, 228, 0.849);
 }
 
 /* NAVBAR HOVER EFFECT END HERE */
