--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,17 @@ html {
   overflow-x: hidden;
 }
 
+
+
+
+*{
+    padding: 0;
+    margin: 0;
+}
 /* Scrollbar Starts Here */
 ::-webkit-scrollbar {
   width: 10px;
+
 }
 ::-webkit-scrollbar-track {
   background-color: #8db2e4;
@@ -228,6 +236,143 @@ header h2 {
         width: 200px;
     } */
 }
+
+@media screen and (max-width: 430px){
+    body{
+        overflow: hidden;
+    }
+    #about-me{
+        margin: 0;
+        padding: 0;
+	padding-bottom: 10px;
+    }
+    div.about-box{
+        margin: 10px;
+    }
+    div.about-img > img{
+        display: block;
+        width: 200px;
+    }
+}
+
+.projects{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    background-color: #132945;
+    color: white;
+    padding: 2rem;
+
+}
+
+.projects h2{
+    font-size: 50px;
+    position: relative;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+.projects h2::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 0%;
+    height: 3%;
+    background-color: white;
+    animation: h2-bottom 1s infinite ease-in-out alternate;
+
+}
+
+.clickme {
+    color: #031D44;
+    background-color: #EEEEEE;
+    padding: 2px 20px;
+    text-decoration:none;
+    font-weight:bold;
+    border-radius:5px;
+    cursor:pointer;
+}
+
+.testimotionals {
+    width:350px;
+     display:inline-block;
+      margin-left:50px;
+      margin-top:50px;
+    }
+    
+    
+    .testimotionals .card {
+      
+      position:relative;
+      overflow:hidden;
+      width:350px;
+      margin:0 auto;
+      background:#131B2F;
+      padding:20px;
+      box-sizing:border-box;
+      text-align:center;
+      box-shadow:0 10px 40px rgba(0,0,0,.5)
+    }
+    .testimotionals .card .layer {
+      z-index:1;
+      position:absolute;
+      top:calc(100% - 2px);
+      height:100%;
+      width:100%;
+      left:0;
+      background-image: linear-gradient(to top, #082757, #0a2f6a, #0f377d, #153f90, #1e47a4);
+      transition:0.5s;
+      
+    }
+    
+    .testimotionals .card .content {
+      z-index:2; 
+      position:relative;
+    }
+    
+    .testimotionals .card:hover  .layer{
+      top:0;
+    }
+    
+    .testimotionals .card .content p {
+      font-size:14px;
+      line-height:24px;
+      color:#fff;
+      
+    }
+    .testimotionals .card .content .image {
+      width:100px; height:100px;
+      margin:0 auto;
+      border-radius:50%;
+      overflow:hidden;
+      border: 4px solid white;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+      
+    }
+    
+    .testimotionals .card .content .details h3 {
+    font-size:18px;
+    color:white;
+    }
+    .testimotionals .card .content .details h3 span {
+    font-size:18px;
+    color:purple;
+      transition:0.5s;
+    }
+    .testimotionals .card:hover .content .details h3 span {
+      color:white;
+      position:relative
+    }
+
+
+
+.education{
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 @media screen and (max-width: 430px) {
   body {
     overflow: hidden;
@@ -246,67 +391,7 @@ header h2 {
   }
 }
 
-.projects {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: #132945;
-  color: white;
-  padding: 2rem;
-}
-.projects h2 {
-  font-size: 50px;
-  position: relative;
-  font-family: "Source Sans Pro", sans-serif;
-}
-.projects h2::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  width: 0%;
-  height: 3%;
-  background-color: white;
-  animation: h2-bottom 1s infinite ease-in-out alternate;
-}
-.projects-div {
-  display: flex;
-  padding-top: 2rem;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.card {
-  /* background-color: rgb(0, 143, 143,0.1); */
-  box-shadow: 0px 2px 10px 2px rgb(255, 255, 255, 0.3);
-  color: black;
-  padding: 20px;
-  margin: 20px;
-  font-family: "Source Sans Pro", sans-serif;
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  min-height: 300px;
-  width: 200px;
-}
 
-.proName {
-  font-size: 35px;
-  color: white;
-}
-.proLink {
-  background: #005eda;
-  padding: 10px 20px;
-  border-radius: 5px;
-  color: white;
-  text-decoration: none;
-  margin: 10px;
-}
-.desc {
-  color: #88bafc;
-}
 .education {
   padding: 2rem;
   display: flex;
