--- a/css/style.css
+++ b/css/style.css
@@ -358,3 +358,69 @@ header h2{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.contactme {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #132945;
+}
+
+.contactme h2 {
+    font-size: 50px;
+    position: relative;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+.contactme h2::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 0%;
+    height: 3%;
+    background-color: #132945;
+    animation: h2-bottom 1s infinite ease-in-out alternate;
+}
+
+.contactme input {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 3px solid #132945;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px;
+}
+
+.content {
+    display: flex;
+    padding: 2rem;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    max-height: fit-content;
+}
+
+.form {
+    padding: 40px;
+    text-indent: 50px;
+    box-shadow: 0px 2px 10px 2px #132945;
+    margin: 30px;
+    flex: 1;
+    font-size: large;
+    color: rgb(56, 55, 55);
+    border-radius: 10px;
+}
+
+#contactsubmit {
+    margin-top: 1em;
+    border: 3px solid #132945;
+    border-radius: 3px;
+    box-shadow: 0px 0px 2px;
+    background-color: #132945;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 8px;
+    margin-left: 57px;
+}
