--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,7 @@ header h2 {
         font-size: 50px;
         position: relative;
         font-family: 'Source Sans Pro', sans-serif;
+	margin-top:50px;
     }
     
     .contactme h2::before {
