--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ header h2 {
   font-size: 16px;
   padding: 10px;
 }
+
 .about-me {
   display: flex;
   padding: 2rem;
@@ -251,6 +252,7 @@ header h2 {
   font-size: 50px;
   position: relative;
 }
+
 .about-me h2::before {
   content: "";
   position: absolute;
@@ -339,16 +341,16 @@ header h2 {
         width: 200px;
     }
 }
-
 .projects{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
     background-color: #132945;
     color: white;
     padding: 2rem;
-
+    overflow: hidden;
 }
 
 .projects h2{
@@ -356,6 +358,7 @@ header h2 {
     position: relative;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
 .projects h2::before{
     content: "";
     position: absolute;
@@ -364,40 +367,47 @@ header h2 {
     height: 3%;
     background-color: white;
     animation: h2-bottom 1s infinite ease-in-out alternate;
-
+}@keyframes h2-bottom {
+  0% {
+    width: 0px;
+  }
+  100% {
+    width: 100%;
+  }
 }
 
+
 .clickme {
-    color: #031D44;
-    background-color: #EEEEEE;
-    padding: 2px 20px;
-    text-decoration:none;
-    font-weight:bold;
-    border-radius:5px;
-    cursor:pointer;
+      font-size:18px;
+      color: #031D44;
+      background-color: #EEEEEE;
+      padding: 6px 20px;
+      text-decoration:none;
+      font-weight:bold;
+      border-radius:5px;
+      cursor:pointer;
 }
 
 .testimotionals {
-    width:350px;
-     display:inline-block;
-      margin-left:50px;
-      margin-top:50px;
-    }
-    
-    
-    .testimotionals .card {
-      
+  flex: 1 0 25%;
+  float: left;
+  margin-left:50px;
+  margin-top:50px;
+}
+
+.testimotionals .card {
       position:relative;
       overflow:hidden;
-      width:350px;
-      margin:0 auto;
+      width: 350px;
+      margin: 0 auto;
       background:#131B2F;
       padding:20px;
       box-sizing:border-box;
       text-align:center;
       box-shadow:0 10px 40px rgba(0,0,0,.5)
-    }
-    .testimotionals .card .layer {
+ }
+
+ .testimotionals .card .layer {
       z-index:1;
       position:absolute;
       top:calc(100% - 2px);
@@ -405,50 +415,49 @@ header h2 {
       width:100%;
       left:0;
       background-image: linear-gradient(to top, #082757, #0a2f6a, #0f377d, #153f90, #1e47a4);
-      transition:0.5s;
-      
-    }
-    
-    .testimotionals .card .content {
+      transition:0.5s;      
+}
+
+  .testimotionals .card .content {
       z-index:2; 
       position:relative;
     }
     
-    .testimotionals .card:hover  .layer{
+  .testimotionals .card:hover  .layer{
       top:0;
     }
     
-    .testimotionals .card .content p {
+  .testimotionals .card .content p {
       font-size:14px;
       line-height:24px;
       color:#fff;
-      
-    }
-    .testimotionals .card .content .image {
+  }
+   
+  .testimotionals .card .content .image {
       width:100px; height:100px;
       margin:0 auto;
       border-radius:50%;
       overflow:hidden;
       border: 4px solid white;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-      
+      box-shadow: 0 10px 40px rgba(0,0,0,0.5); 
     }
     
     .testimotionals .card .content .details h3 {
-    font-size:18px;
-    color:white;
-    }
+      font-size:18px;
+      color:white;
+      padding-top: 10px; 
+  }
+
     .testimotionals .card .content .details h3 span {
-    font-size:18px;
-    color:purple;
+      font-size:18px;
+      color:purple;
       transition:0.5s;
     }
+
     .testimotionals .card:hover .content .details h3 span {
       color:white;
       position:relative
     }
-
-
 
 .education{
     padding: 2rem;
@@ -475,7 +484,6 @@ header h2 {
     width: 200px;
   }
 }
-
 
 .education {
   padding: 2rem;
