updated projects section

--- a/css/style.css
+++ b/css/style.css
@@ -343,12 +343,12 @@ header h2 {
 .projects{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     flex-direction: row;
     background-color: #132945;
     color: white;
     padding: 2rem;
-
+    height: 600px;
 }
 
 .projects h2{
@@ -376,79 +376,6 @@ header h2 {
     border-radius:5px;
     cursor:pointer;
 }
-
-.testimotionals {
-    width:350px;
-     display:inline-block;
-      margin-left:50px;
-      margin-top:50px;
-    }
-    
-    
-    .testimotionals .card {
-      
-      position:relative;
-      overflow:hidden;
-      width:350px;
-      margin:0 auto;
-      background:#131B2F;
-      padding:20px;
-      box-sizing:border-box;
-      text-align:center;
-      box-shadow:0 10px 40px rgba(0,0,0,.5)
-    }
-    .testimotionals .card .layer {
-      z-index:1;
-      position:absolute;
-      top:calc(100% - 2px);
-      height:100%;
-      width:100%;
-      left:0;
-      background-image: linear-gradient(to top, #082757, #0a2f6a, #0f377d, #153f90, #1e47a4);
-      transition:0.5s;
-      
-    }
-    
-    .testimotionals .card .content {
-      z-index:2; 
-      position:relative;
-    }
-    
-    .testimotionals .card:hover  .layer{
-      top:0;
-    }
-    
-    .testimotionals .card .content p {
-      font-size:14px;
-      line-height:24px;
-      color:#fff;
-      
-    }
-    .testimotionals .card .content .image {
-      width:100px; height:100px;
-      margin:0 auto;
-      border-radius:50%;
-      overflow:hidden;
-      border: 4px solid white;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-      
-    }
-    
-    .testimotionals .card .content .details h3 {
-    font-size:18px;
-    color:white;
-    }
-    .testimotionals .card .content .details h3 span {
-    font-size:18px;
-    color:purple;
-      transition:0.5s;
-    }
-    .testimotionals .card:hover .content .details h3 span {
-      color:white;
-      position:relative
-    }
-
-
 
 .education{
     padding: 2rem;
@@ -727,3 +654,105 @@ header h2 {
         padding: 10px;
         width: 50%;
     }
+
+
+    
+.container {
+  position: absolute;
+  height: 600px;
+  width: auto;
+  display: flex;
+}
+
+.card {
+  display: flex;
+  height: 500px;
+  width: 280px;
+  background-color: #17141d;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #020714;
+  transition: 0.5s cubic-bezier(1, 0, 0, 0);
+  position: relative;
+  left: 0px;
+}
+
+.card:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card:hover {
+  transform: translateY(-20px);
+  transition: 0.4s ease-out;
+  width: 320px;
+}
+
+.card:hover ~ .card {
+  position: relative;
+  left: 70px;
+  transition: 0.4s ease-out;
+  width: 320;
+}
+
+.title {
+  color: white;
+  font-weight: 300;
+  font-family: Source Sans Pro, sans-serif;
+  position: absolute;
+  left: 35px;
+  top: 15px;
+}
+.card:hover ,title{
+  font-size: 120%;
+}
+.bar {
+  position: absolute;
+  top: 55px;
+  left: 20px;
+  height: 5px;
+  width: 150px;
+}
+
+.emptybar {
+  background-color: #2e3033;
+  width: 100%;
+  height: 100%;
+}
+
+.filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 0px;
+  height: 100%;
+  background: rgb(0,154,217);
+  background: linear-gradient(90deg, rgba(0,154,217,1) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
+  transition: 0.6s cubic-bezier(1, 0, 0, 0);
+}
+
+.card:hover .filledbar {
+  width: 150px;
+  transition: 0.4s cubic-bezier(1, 0, 0, 0);
+}
+
+.img {
+  width:120px; height:120px;
+  margin:10px 30px;
+  border-radius:50%;
+  overflow:hidden;
+  border: 4px solid white;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+}
+.card:hover .img{
+  width:150px; height:150px;
+  margin:10px 80px;
+}
+
+.detail{
+  text-align: center;
+  font-family: Source Sans Pro, sans-serif;
+  font-size: 15px;
+}
+.card:hover .detail{
+  width: 250px;
+  font-size: 18px;
+}
